--- a/cjllxt/android/app/build.gradle
+++ b/cjllxt/android/app/build.gradle
@@ -155,6 +155,7 @@ dependencies {
     compile files('libs/baidumapapi_radar_v3_6_1.jar')
     compile files('libs/baidumapapi_search_v3_6_1.jar')
     compile files('libs/baidumapapi_util_v3_6_1.jar')
+    compile files('libs/locSDK_6.13.jar')
 }
 
 // Run this once to be able to run the application with BUCK
