--- a/cjllxt/android/app/build.gradle
+++ b/cjllxt/android/app/build.gradle
@@ -147,8 +147,8 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.facebook.react:react-native:+'
-    // From node_modules
     compile 'com.google.android.exoplayer:exoplayer:r1.5.6'
+    compile 'com.afollestad.material-dialogs:commons:0.8.6.2'
     compile files('libs/baidumapapi_base_v3_6_1.jar')
     compile files('libs/baidumapapi_cloud_v3_6_1.jar')
     compile files('libs/baidumapapi_map_v3_6_1.jar')
