--- a/cjllxt/android/app/build.gradle
+++ b/cjllxt/android/app/build.gradle
@@ -93,7 +93,7 @@ android {
         versionCode 1
         versionName "1.0"
         ndk {
-            abiFilters "armeabi-v7a", "x86"
+            abiFilters "armeabi", "x86"
         }
     }
     splits {
@@ -101,7 +101,7 @@ android {
             reset()
             enable enableSeparateBuildPerCPUArchitecture
             universalApk false  // If true, also generate a universal APK
-            include "armeabi-v7a", "x86"
+            include "armeabi", "x86"
         }
     }
     signingConfigs{
@@ -124,7 +124,7 @@ android {
         variant.outputs.each { output ->
             // For each separate APK per architecture, set a unique version code as described here:
             // http://tools.android.com/tech-docs/new-build-system/user-guide/apk-splits
-            def versionCodes = ["armeabi-v7a":1, "x86":2]
+            def versionCodes = ["armeabi":1, "x86":2]
             def abi = output.getFilter(OutputFile.ABI)
             if (abi != null) {  // null for the universal-debug, universal-release variants
                 output.versionCodeOverride =
@@ -139,23 +139,19 @@ android {
     }
     sourceSets {
         main {
-            jniLibs.srcDirs = ['libs']
+            jniLibs.srcDirs = ['../libs']
         }
     }
 }
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(dir: '../libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.facebook.react:react-native:+'
     compile 'com.google.android.exoplayer:exoplayer:r1.5.6'
     compile 'com.afollestad.material-dialogs:commons:0.8.6.2'
-    compile files('libs/baidumapapi_base_v3_6_1.jar')
-    compile files('libs/baidumapapi_cloud_v3_6_1.jar')
-    compile files('libs/baidumapapi_map_v3_6_1.jar')
-    compile files('libs/baidumapapi_radar_v3_6_1.jar')
-    compile files('libs/baidumapapi_search_v3_6_1.jar')
-    compile files('libs/baidumapapi_util_v3_6_1.jar')
-    compile files('libs/locSDK_6.13.jar')
+    compile files('../libs/BaiduLBS_Android.jar')
+    compile files('../libs/httpmime-4.1.2.jar')
+    compile files('../libs/IndoorscapeAlbumPlugin.jar')
 }
 
 // Run this once to be able to run the application with BUCK
