--- a/cjllxt/android/app/build.gradle
+++ b/cjllxt/android/app/build.gradle
@@ -133,7 +133,7 @@ android {
             def oldFile = output.outputFile
             if (variant.buildType.name.equals('release')) {
                  def releaseApkName = 'cjllxt.apk'
-                 output.outputFile = new File('../../packages/android/latest', releaseApkName)
+                 output.outputFile = new File('package', releaseApkName)
             }
         }
     }
@@ -158,5 +158,5 @@ dependencies {
 // puts all compile dependencies into folder libs for BUCK to use
 task copyDownloadableDepsToLibs(type: Copy) {
   from configurations.compile
-  into 'libs'
+  into '../libs'
 }
