--- a/cjllxt/android/app/build.gradle
+++ b/cjllxt/android/app/build.gradle
@@ -139,19 +139,16 @@ android {
     }
     sourceSets {
         main {
-            jniLibs.srcDirs = ['../libs']
+            jniLibs.srcDirs = ['libs']
         }
     }
 }
 dependencies {
-    compile fileTree(dir: '../libs', include: ['*.jar'])
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.facebook.react:react-native:+'
     compile 'com.google.android.exoplayer:exoplayer:r1.5.6'
     compile 'com.afollestad.material-dialogs:commons:0.8.6.2'
-    compile files('../libs/BaiduLBS_Android.jar')
-    compile files('../libs/httpmime-4.1.2.jar')
-    compile files('../libs/IndoorscapeAlbumPlugin.jar')
 }
 
 // Run this once to be able to run the application with BUCK
