--- a/cjzs/android/app/build.gradle
+++ b/cjzs/android/app/build.gradle
@@ -140,9 +140,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:23.0.1"
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.facebook.react:react-native:+'
+    // From node_modules
     compile 'com.google.android.exoplayer:exoplayer:r1.5.6'
     compile 'com.afollestad.material-dialogs:commons:0.8.6.2'
 }
