--- a/cjzs/android/app/build.gradle
+++ b/cjzs/android/app/build.gradle
@@ -146,6 +146,7 @@ dependencies {
     // From node_modules
     compile 'com.google.android.exoplayer:exoplayer:r1.5.6'
     compile 'com.afollestad.material-dialogs:commons:0.8.6.2'
+    compile 'com.google.zxing:core:3.2.1'
 }
 
 // Run this once to be able to run the application with BUCK
