--- a/cjzs/android/app/src/main/AndroidManifest.xml
+++ b/cjzs/android/app/src/main/AndroidManifest.xml
@@ -33,6 +33,13 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+      <activity
+            android:name="com.yapovich.cjzs.components.qrcode.zxing.activity.CaptureActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:windowSoftInputMode="stateAlwaysHidden">
+        </activity>
     </application>
 
 </manifest>
