--- a/cjzs/android/app/build.gradle
+++ b/cjzs/android/app/build.gradle
@@ -95,6 +95,7 @@ android {
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
+        multiDexEnabled true
     }
     splits {
         abi {
@@ -137,6 +138,13 @@ android {
             }
         }
     }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+    }
 }
 
 dependencies {
@@ -147,6 +155,7 @@ dependencies {
     compile 'com.afollestad.material-dialogs:commons:0.8.6.2'
     compile 'com.google.zxing:core:3.2.1'
     compile 'com.github.Cutta:GifView:1.1'
+    compile 'com.android.support:multidex:+'
 }
 
 // Run this once to be able to run the application with BUCK
